--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,26 +1,36 @@
 * {
     box-sizing: border-box;
 }
-
-.Wrapper {
-    float: right;
-    text-align: center;
-    display: flex;
+.all {
     height: 12vh;
     width: 100%;
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    text-align: center;
     z-index: 1;
 }
 
-.Menu { 
+.logo {
+    width: 135px;
+    height: fit-content;
+    margin-top: 1.45rem;
+    margin-left: 1.5rem;
+}
+
+.Menu {
     display: inline-flex;
     position: relative;
     overflow: hidden;
-    margin-top: 1.4rem;
+    margin-left: 19.5rem;
+    margin-top: 1.9rem;
     margin-right: 1rem;
     max-width: 100%;
     padding: 0 20px;
+}
+
+.logo {
+    padding: 10px;
+    width: 130px;
+    height: fit-content;
 }
 
 .MenuItem {
