--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: 'poppinsL';
+    src: url('../font/Poppins-Light.ttf');
+}
+
+@font-face {
+    font-family: 'poppinsM';
+    src: url('../font/Poppins-Medium.ttf');
+}
+
+@font-face {
+    font-family: 'poppinsB';
+    src: url('../font/Poppins-Bold.ttf');
+}
+
 * {
     box-sizing: border-box;
 }
@@ -214,11 +229,13 @@
     margin-bottom: 15px;
     display: block;
     font-weight: 500;
+    font-family: 'poppinsM';
 }
 
 .blog-slider__title {
     font-size: 24px;
-    font-weight: 700;
+    /* font-weight: 900; */
+    font-family: 'poppinsB';
     color: #0d0925;
     margin-bottom: 20px;
 }
@@ -227,6 +244,7 @@
     color: #4e4a67;
     margin-bottom: 30px;
     line-height: 1.5em;
+    font-family: 'poppinsL';
 }
   
 .blog-slider__button {
@@ -238,6 +256,7 @@
     box-shadow: 0px 14px 80px rgba(142, 197, 252, 0.2);
     text-decoration: none;
     font-weight: 500;
+    font-family: 'poppinsM';
     justify-content: center;
     text-align: center;
     letter-spacing: 1px;
