--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -139,8 +139,8 @@
     width: 300px;
     flex-shrink: 0;
     height: 300px;
-    box-shadow: 4px 13px 30px 1px rgba(142, 197, 252, 0.2);
-    border-radius: 20px;
+    /* box-shadow: 4px 13px 30px 1px rgba(142, 197, 252, 0.2); */
+    border-radius: 25px;
     transform: translateX(-80px);
     overflow: hidden;
 }
