--- a/src/css/About.css
+++ b/src/css/About.css
@@ -24,7 +24,31 @@
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_five@.2.0/UhBeeSeulvely.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-    }
+}
+
+::-webkit-scrollbar { 
+    width: 8px;
+
+}
+
+::-webkit-scrollbar-track { 
+    background-color:#9b9b9b;
+}
+
+::-webkit-scrollbar-thumb { 
+    /* background:linear-gradient(147deg, #9d69ce 0%, #70a5da 74%); */
+    background: #5a5a5a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #70a5da; 
+}
+
+::-webkit-scrollbar-thumb:active { 
+    background: #3a5e81;
+} 
+
+::-webkit-scrollbar-button { display: none; }
 
 .bs-all {
     max-width: 1920px;
@@ -37,6 +61,7 @@
 }
 
 .about {
+    overflow: auto;
     min-height: 88vh;
     height: fit-content;
     width: 80%;
@@ -45,6 +70,7 @@
     border-radius: 28px;
     padding: 6%;
 }
+
 
 .about-text {
     color: #5a5a5a;
