--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Gosanja';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/Gosanja.woff') format('woff');
+    font-family: 'SDSamliphopangche_Basic';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Basic.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -20,15 +20,12 @@
 }
 
 @font-face {
-    font-family: 'UhBeeSeulvely';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_five@.2.0/UhBeeSeulvely.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'poppinsM';
+    src: url('../font/Poppins-Medium.ttf');
 }
 
 ::-webkit-scrollbar { 
     width: 8px;
-
 }
 
 ::-webkit-scrollbar-track { 
@@ -36,7 +33,6 @@
 }
 
 ::-webkit-scrollbar-thumb { 
-    /* background:linear-gradient(147deg, #9d69ce 0%, #70a5da 74%); */
     background: #5a5a5a;
 }
 
@@ -61,30 +57,164 @@
 }
 
 .about {
-    overflow: auto;
-    min-height: 88vh;
+    overflow: hidden;
+    min-height: 80.7vh;
     height: fit-content;
-    width: 80%;
+    width: 75%;
     margin-top: 2.8rem;
-    background-color: white;
-    border-radius: 28px;
-    padding: 6%;
 }
 
-
-.about-text {
-    color: #5a5a5a;
-    font-size: 70px;
-    font-family: 'UhBeeSeulvely';
-    /* font-family: 'Gosanja'; */
-    /* margin: 2rem; */
+.first {
+    min-height: 80.7vh;
+    padding: 5%;
 }
 
-.text {
-    font-size: 18px;
-    color: #5a5a5a;
+.first-text {
+    color: white;
+    font-size: 45px;
+    font-family: 'SDSamliphopangche_Basic';
+    margin-top: 3rem;
+}
+
+.about-logo {
+    margin-top: 5px;
+    width: 440px;
+    height: auto;
+}
+
+.first-details {
+    font-size: 15px;
+    color: rgb(51, 51, 51);
     font-family: 'IBMPlexSansKR-Light';
     line-height: 1.5em;
-    margin-top: 1.6rem;
-    /* text-align: center; */
+    margin-top: 2.6rem;
+}
+
+.about-kid {
+    width: 255px;
+    height: auto;
+    float: right;
+    margin-right: 2rem;
+    opacity: 60%;
+}
+
+.second {
+    background-color: white;
+    padding: 5%;
+    width: auto;
+    height: 70vh;
+    min-height: 60vh;
+    border-radius: 28px 28px 0 0;
+    text-align: center;
+}
+
+.second-text {
+    color: rgb(34, 34, 34);
+    font-size: 28px;
+    font-family: 'SDSamliphopangche_Basic';
+    margin-top: 2rem;
+    line-height: 1.3em;
+    text-align: center;
+}
+
+.second-details {
+    font-size: 15px;
+    color: rgb(51, 51, 51);
+    font-family: 'IBMPlexSansKR-Light';
+    line-height: 1.5em;
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.about-emotion {
+    width: 25%;
+    height: auto;
+    margin-top: 2rem;
+    opacity: 50%;
+}
+
+.third {
+    background-color: rgb(250, 250, 250);
+    padding: 5%;
+    width: auto;
+    height: 70vh;
+    min-height: 60vh;
+}
+
+.third-text {
+    color: rgb(34, 34, 34);
+    font-size: 28px;
+    font-family: 'SDSamliphopangche_Basic';
+    margin-top: 2rem;
+    margin-left: 2rem;
+    line-height: 1.3em;
+}
+
+.third-details {
+    font-size: 15px;
+    color: rgb(51, 51, 51);
+    font-family: 'IBMPlexSansKR-Light';
+    line-height: 1.5em;
+    margin-top: 1rem;
+    margin-left: 2rem;
+}
+
+.about-lang {
+    width: 28%;
+    height: auto;
+    float: right;
+    margin-right: 2rem;
+    opacity: 90%;
+}
+
+.fourth {
+    background-color:white;
+    padding: 5%;
+    width: auto;
+    height: 80vh;
+    min-height: 60vh;
+}
+
+.fourth-text {
+    color: rgb(34, 34, 34);
+    font-size: 28px;
+    font-family: 'SDSamliphopangche_Basic';
+    margin-top: 2rem;
+    line-height: 1.3em;
+    text-align: center;
+}
+
+.fourth-details {
+    line-height: 1.5em;
+    margin-top: 1rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-intro {
+    width: 40%;
+    height: fit-content;
+    margin: 10px;
+}
+
+.about-img {
+    width: 35%;
+    height: auto;
+    margin: 10px;
+}
+
+.about-name {
+    font-family: 'poppinsM';
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+.about-bio {
+    font-size: 14px;
+    color: rgb(51, 51, 51);
+    font-family: 'IBMPlexSansKR-Light';
+    line-height: 1.5em;
+    margin-top: 1rem;
 }
