about interaction, goTop button 추가

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -29,11 +29,12 @@
 }
 
 ::-webkit-scrollbar-track { 
-    background-color:#9b9b9b;
+    background-color: #8ec5fc;
 }
 
 ::-webkit-scrollbar-thumb { 
     background: #5a5a5a;
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -70,10 +71,31 @@
 }
 
 .first-text {
+    width: auto;
+    height: fit-content;
     color: white;
     font-size: 45px;
     font-family: 'SDSamliphopangche_Basic';
     margin-top: 3rem;
+}
+
+@keyframes spacing {
+    0% {
+        opacity: 0;
+        color:rgb(51, 51, 51);
+    }
+    50% {
+        opacity: 1;
+        color: #000;
+    }
+    100% {
+        opacity: 1;
+        color: white;
+    }
+}
+
+.first-text:hover {
+    animation: spacing 2.2s ease-in-out;
 }
 
 .about-logo {
