--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -3,6 +3,13 @@
     src: url('../font/Poppins-Medium.ttf');
 }
 
+@font-face {
+    font-family: 'SDSamliphopangche_Basic';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Basic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -10,6 +17,7 @@
     height: 12vh;
     width: 100%;
     display: flex;
+    justify-content: space-between;
     text-align: center;
     z-index: 1;
 }
@@ -17,24 +25,21 @@
 .logo {
     width: 135px;
     height: fit-content;
-    margin-top: 1.45rem;
-    margin-left: 1.5rem;
+    margin-top: 2.3%;
+    margin-left: 2%;
 }
 
 .Menu {
     display: inline-flex;
     position: relative;
     overflow: hidden;
-    margin-left: 19.5rem;
-    margin-top: 1.9rem;
-    margin-right: 1rem;
+    margin-top: 2.3%;
     max-width: 100%;
     padding: 0 20px;
 }
 
 .logo {
-    padding: 10px;
-    width: 130px;
+    width: 120px;
     height: fit-content;
 }
 
@@ -82,4 +87,28 @@
     height: 5px;
     z-index: 1;
     border-radius: 8px 8px 0 0;
+}
+
+.request-btn {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-family: 'SDSamliphopangche_Basic';
+    font-size: 15px;
+    text-align: center;
+    padding: 5px 15px;
+    border: solid 3px white;
+    border-radius: 5px;
+    color:#fff;
+    background-color: transparent;
+    width: 87px;
+    height: fit-content;
+    margin-top: 2.5%;
+    margin-right: 2.2%;
+    box-shadow: 1.5px 1.5px rgba(34, 35, 58, 0.2);
+}
+
+.request-btn:hover {
+    color: #5a5a5a;
+    border: solid 3px #5a5a5a;
 }
