--- a/src/css/FAQ.css
+++ b/src/css/FAQ.css
@@ -86,14 +86,14 @@
     font-family: 'SDSamliphopangche_Basic';
     font-size: 18px;
     text-align: center;
-    padding: 10px 15px;
-    border-radius: 30px;
+    padding: 15px 35px;
+    border-radius: 50px;
     color:rgb(255, 255, 255);
     background-color: #b1b1b1;
     width: 12vw;
-    height: 40px;
+    height: 8vh;
     margin: 0 auto;
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 
 .qna-button:hover {
