--- a/src/css/Exhibition.css
+++ b/src/css/Exhibition.css
@@ -19,9 +19,174 @@
 }
 
 .exhibition-text {
-    color: #5a5a5a;
-    font-size: 22px;
-    font-weight: 700;
-    font-family: 'poppinsM';
-    margin: 2rem;
+    color: #ffffff;
+    font-size: 28px;
+    font-family: 'SDSamliphopangche_Basic';
+    margin: 4.4rem 0 2rem 0;
+    text-align: center;
 }
+
+.ex-dropdown {
+    z-index: 2;
+    float: right;
+    position: relative;
+    margin-right: 8vw;
+}
+
+.ex-dropbtn {
+    width: 8.2vw;
+    height: 5.9vh;
+    font-family: 'IBMPlexSansKR-Light';
+    font-size: 0.88rem;
+    font-weight: 800;
+    background-color: rgb(255, 255, 255, 0.42);
+    color: rgb(68, 68, 68);
+    border-color: white;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    box-shadow: 0px 7px 13px 0px rgba(58, 57, 57, 0.2);
+
+}
+
+.ex-dropdown:hover .ex-dropdown-content {
+    display: block;
+}
+
+.ex-dropdown:hover .ex-dropbtn {
+    background-color: rgb(255, 255, 255, 0.88);
+}
+
+.ex-dropdown-content {
+    font-family: 'IBMPlexSansKR-Light';
+    font-size: 0.88rem;
+    font-weight: 800;
+    text-align: center;
+    display: none;
+    position: absolute;
+    background-color: rgb(255, 255, 255, 0.5);
+    color: rgb(68, 68, 68);
+    min-width: 8.2vw;
+    border-radius: 12px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.ex-dropdown-content a {
+    color: rgb(68, 68, 68);
+    padding: 1vh 0.8vw;
+    text-decoration: none;
+    display: block;
+    max-height: 5.9vh;
+    text-align: center;
+}
+
+.ex-dropdown-content a:hover {
+    background-color: rgb(255, 255, 255, 0.88);
+    border-radius: 12px;
+}
+
+.wrapper {
+    z-index: 1;
+    display: flex;
+    width: 88%;
+    height: fit-content;
+    justify-content: space-around;
+    margin: 0 auto;
+    margin-top: 20vh;
+}
+
+.card {
+    width: 27vw;
+    height: 38vh;
+    border-radius: 15px;
+    padding: 1.5rem;
+    background: white;
+    position: relative;
+    display: flex;
+    align-items: center;
+    transition: 0.4s ease-out;
+    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+    font-weight: 500;
+    font-family: 'poppinsM';
+}
+
+.card:hover {
+    transform: translateY(20px);
+}
+
+.card:hover:before {
+    opacity: 1;
+}
+
+.card:hover .info {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+.card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 2;
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.card img {
+    position: absolute; top:0; left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 15px;
+}
+
+.card .info {
+    position: relative;
+    z-index: 3;
+    color: white;
+    opacity: 0;
+    transform: translateY(30px);
+    transition: 0.5s;
+}
+
+.card .info h1 {
+    margin: 0px;
+}
+
+.card .info p {
+    letter-spacing: 1px;
+    font-size: 14px;
+    margin-top: 8px;
+}
+
+.card .info button {
+    width: 6.8vw;
+    padding: 0.6rem;
+    outline: none;
+    border: none;
+    border-radius: 3px;
+    background: white;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.4s ease;
+    font-weight: 500;
+    font-family: 'poppinsM';
+    margin-top: 3vh;
+}
+
+.card .info button:hover {
+    background: linear-gradient(147deg, #e0c3fc 0%, #8ec5fc 74%);
+    color: white;
+}
+
+  
