--- a/src/css/Exhibition.css
+++ b/src/css/Exhibition.css
@@ -1,7 +1,20 @@
 @font-face {
     font-family: 'poppinsM';
     src: url('../font/Poppins-Medium.ttf');
-  }
+}
+
+@font-face {
+    font-family: 'poppinsL';
+    src: url('../font/Poppins-Light.ttf');
+}
+
+
+@font-face {
+    font-family: 'IBMPlexSansKR-Light';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 .bs-all {
     max-width: 1920px;
@@ -107,8 +120,6 @@
     align-items: center;
     transition: 0.4s ease-out;
     box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
-    font-weight: 500;
-    font-family: 'poppinsM';
 }
 
 .card:hover {
@@ -133,7 +144,7 @@
     width: 100%;
     height: 100%;
     border-radius: 15px;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(12, 12, 12, 0.9);
     z-index: 2;
     transition: 0.5s;
     opacity: 0;
@@ -161,12 +172,22 @@
 
 .card .info h1 {
     margin: 0px;
+    font-family: 'poppinsM';
+    font-size: 5.3vh;
 }
 
 .card .info p {
     letter-spacing: 1px;
+    font-size: 2vh;
+    margin-top: 3vh;
+    font-family: 'poppinsL';
+}
+
+.card .info .info-details {
+    letter-spacing: 1px;
     font-size: 14px;
     margin-top: 8px;
+    font-family: 'IBMPlexSansKR-Light';
 }
 
 .card .info button {
@@ -180,7 +201,6 @@
     cursor: pointer;
     font-weight: 500;
     font-family: 'poppinsM';
-    margin-top: 2.5vh;
     float: right;
 }
 
