--- a/src/css/contents/Popup.css
+++ b/src/css/contents/Popup.css
@@ -4,6 +4,13 @@
     font-family: 'Noto Sans KR', sans-serif;
 }
 
+@font-face {
+    font-family: 'NeoDunggeunmo';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.3/NeoDunggeunmo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .dimmed_layer_wrapper .full_layer {
     overflow:hidden;
     position:fixed;
@@ -21,26 +28,36 @@
     vertical-align:middle;
     height:100%;
     content:'';
+    background-color: rgba(0, 0, 0, 0.4);
 }
+
 .common_alert{
     z-index:2;
     position:relative;
     top:50%;
     display:inline-block;
     vertical-align:middle;
-    width: 20vw;
+    width: 18vw;
     height: 18vh;
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(197, 197, 197);
     white-space:normal;
     word-break:break-word;
-    text-align:center;
-    border-radius:10px;
-    padding-top: 3vh;
+    border-radius:5px;
     box-sizing:border-box;
-    box-shadow: 4px 4px 2px 1px rgba(19, 22, 179, 0.7);
-    font-size: 4vh;
-    font-weight: 500;
+    box-shadow: 0.3vh 0.3vh rgba(77, 77, 77, 0.7);
+    
+}
+
+.select-result {
+    text-align:center;
+    font-size: 3.8vh;
+    font-weight: 600;
+    color: rgb(37, 37, 37);
     font-family: 'Noto Sans KR', sans-serif;
+    width: 9vw;
+    height: 18vh;
+    padding-top: 2.9vw;
+    border-right: dashed 2px rgb(172, 172, 172);
 }
 
 .random-wrapper {
@@ -57,6 +74,23 @@
     left: 0.5vh;
     z-index: 1;
     cursor: pointer;
+}
+
+.popup-btn {
+    width: 2.5vw;
+    height: 5vh;
+    background: transparent;
+    border:none;
+    box-shadow:none;
+    border-radius:0;
+    padding:0;
+    cursor: pointer;
+    float: right;
+    font-family: 'NeoDunggeunmo';
+    font-size: 3vh;
+    color: rgb(80, 80, 80);
+    padding-top: 1.5vh;
+    padding-right: 0.5vh;
 }
 
 .random-select {
