--- a/src/css/contents/Draw.css
+++ b/src/css/contents/Draw.css
@@ -27,14 +27,30 @@
 
 .canvas-save {
     font-family: 'poppinsM';
+    /* float: right; */
     display: inline-block;
-    background: #69c;
+    /* background: #69c; */
     color: #fff;
-    padding: 5px 10px;
+    padding: 5px;
     cursor: pointer;
 }
 
-.pencil__refresh {
+.canvas-save:hover{
+    color: #69c;
+}
+
+.canvas-clear {
+    font-family: 'poppinsM';
+    color: #fff;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.canvas-clear:hover{
+    color: #69c;
+}
+
+/* .pencil__refresh {
     background-color: #FCF4EA;
     border: none;
     border-radius: 50%;
@@ -56,4 +72,4 @@
     position: absolute;
     right: 80px;
     z-index: 4;
- }
+ } */
