--- a/src/css/contents/Draw.css
+++ b/src/css/contents/Draw.css
@@ -22,14 +22,12 @@
     height: 50vh;
     background: rgb(255, 255, 255);
     border: 1.2px dashed;
-    margin-top: 2vh;
+    margin-top: 7vh;
 }
 
 .canvas-save {
     font-family: 'poppinsM';
-    /* float: right; */
-    display: inline-block;
-    /* background: #69c; */
+    float: right;
     color: #fff;
     padding: 5px;
     cursor: pointer;
@@ -40,6 +38,7 @@
 }
 
 .canvas-clear {
+    float: left;
     font-family: 'poppinsM';
     color: #fff;
     padding: 5px;
@@ -49,27 +48,3 @@
 .canvas-clear:hover{
     color: #69c;
 }
-
-/* .pencil__refresh {
-    background-color: #FCF4EA;
-    border: none;
-    border-radius: 50%;
-    bottom: 18px;
-    cursor: pointer;
-    height: 26px;
-    padding: 4px 1px 0px;
-    position: absolute;
-    left: 50%;
-    text-align: center;
-    transform: translateX(-50%);
-    width: auto;
-    z-index: 3;
-}
-
-.pencil__submit {
-    bottom: 27px;
-    display: none;
-    position: absolute;
-    right: 80px;
-    z-index: 4;
- } */
