카드 인터랙션

--- a/src/css/TimeSlip.css
+++ b/src/css/TimeSlip.css
@@ -138,6 +138,7 @@ a {
     font-family: "poppinsM";
     font-weight: 600;
     font-size: 0.8rem;
+    scroll-behavior: smooth;
 }
 
 .year-tab:hover {
